update target dir

--- a/site.yml
+++ b/site.yml
@@ -6,9 +6,9 @@
     - name: generate_file_using_template
       template:
         src: templates/hello_world.j2
-        dest: hello_world.txt
+        dest: /tmp/hello_world.txt
 
     - name: copy_generated_file_to_remote
       copy:
-        src: "hello_world.txt"
+        src: "/tmp/hello_world.txt"
         dest: /tmp
