--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 - hosts: all
   vars:
-    variable_to_be_replaced: 'Hello world'
-    inline_variable: 'hello again'
+    variable_to_be_replaced: 'Vener'
+    inline_variable: 'Guevarra'
   tasks:
     - name: generate_file_using_template
       template:
