--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 - hosts: all
   vars:
-    variable_to_be_replaced: 'Vener'
-    inline_variable: 'Guevarra'
+    variable_to_be_replaced: '172.0.0.1'
+    inline_variable: 'test_dennis'
   tasks:
     - name: generate_file_using_template
       template:
