--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,9 @@
 - hosts: all
-  vars:
-    variable_to_be_replaced: '172.0.0.1'
-    inline_variable: 'test_dennis'
+  vars_files:
+    - config/main.yml
   tasks:
     - name: generate_file_using_template
       template:
-        src: templates/hello_world.j2
-        dest: /tmp/hello_world.txt
-        force: yes
+        src: templates/etc/haproxy.cfg.j2
+        dest: /tmp/haproxy.cfg
+        force: no
